fixed layout problem in storeDetail and stores page

--- a/src/components/common/StoreItem.module.css
+++ b/src/components/common/StoreItem.module.css
@@ -13,6 +13,12 @@
     text-decoration: none;
     cursor: pointer;
   }
+  .card_item{
+    width: 250px;
+    margin-right: 12px;
+    margin-bottom: 20px;
+  
+}
   
   .btn:hover {
     opacity: 1;
